--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,20 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#272727" />
-    <meta
-      name="description"
-      content="Geeky Vision"
-    />
+    <meta name="description" content="Geeky Vision" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-   
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;900&family=Raleway:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,400&display=swap"
+      rel="stylesheet"
+    />
     <title>Geeky Vision</title>
   </head>
   <body>
