Google Console Created!

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#272727" />
     <meta name="description" content="Geeky Vision" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
-
+    <meta
+      name="google-site-verification"
+      content="52sUc9JslaAQ5Vg4IgisXcpUn74pXEwmonT1OFK-6lc"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
