Meta Tags Added for SEO

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
       name="google-site-verification"
       content="52sUc9JslaAQ5Vg4IgisXcpUn74pXEwmonT1OFK-6lc"
     />
+    <meta
+      name="description"
+      content="Geeky Vision is the Best Website Developer Freelance team in Surat | Patna, India that helps your business go digital at a reasonable cost."
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -22,7 +26,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>Geeky Vision</title>
+    <title>Best website developer in Surat & Patna</title>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
