Google Site Tag Update

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,20 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;1,400&display=swap"
       rel="stylesheet"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-127WXGF4FT"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-127WXGF4FT");
+    </script>
     <title>Best website developer in Surat & Patna</title>
   </head>
   <body>
